# MyclosetB

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: .eslintrc.cjs  README.md  alembic.ini  package.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/graphql/: __init__.py  router.py  schema.py
backend/app/api/rest/: auth.py  events.py  items.py  outfits.py  router.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  events.py  items.py  outfits.py  users.py
backend/app/schemas/: __init__.py  auth.py  events.py  items.py  outfits.py  users.py
backend/app/services/: __init__.py  events.py  items.py  outfits.py  recommendations.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_initial_tables.py
backend/src/: index.js
backend/src/myclosetb_backend/: __init__.py  config.py  logging_config.py  main.py  metrics.py
backend/tests/: conftest.py  test_auth.py  test_items.py  test_main.py  test_outfits_events.py
deploy/: backend.Dockerfile  deploy.sh  docker-compose.yml  frontend.Dockerfile
docs/: architecture.md
docs/backend/: supabase-auth.md
docs/frontend/: component-library.md
docs/ui/: README.md  dashboard-wireframe.md  inventory-wireframe.md  look-builder-wireframe.md
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  monitoring.js
frontend/tests/: App.test.jsx
supabase/: config.toml
(+34 files in other folders)
