[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myclosetb-backend"
version = "0.1.0"
description = "Backend service for MyclosetB"
readme = "README.md"
authors = [{ name = "MyclosetB Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.24,<1.0",
    "sentry-sdk>=1.40,<2.0",
    "structlog>=23.2,<24.0",
    "prometheus-client>=0.17,<0.20",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=1.10,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "httpx>=0.25,<0.26",
    "coverage[toml]>=7.3,<8.0",
    "ruff>=0.1.8",
    "bandit>=1.7,<2.0",
    "mypy>=1.8,<2.0",
    "build>=1.0,<2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["myclosetb_backend"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
target-version = "py310"
